# scrutator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  auth.dependencies.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: benchmark-scrutator.yml  ci.yml  deploy.yml  recall-regression.yml
benchmark/: audit_entity_resolver.py
benchmark/ml-vs-llm/: config.py  requirements.txt
benchmark/recall-gate/: SOURCE.md  baseline.json  recall_gate.py  thresholds.json
benchmark/scrutator/: CONSUMERS.md  README.md  SRCH-0031-recall-report.md  golden-arcanada-v0.results-summary.json  harness.py  measure.py  rerank_gate.py
deploy/: install-muneral-kb-sync.sh  ltm-reflect-run.sh  ltm-reflect-state-preflight.sh  ltm-reflect.service  ltm-reflect.timer  muneral-kb-sync-run.sh  muneral-kb-sync.service  muneral-kb-sync.timer  requirements-muneral-kb-sync.txt  scrutator-deploy-transaction.sh
docs/: architecture.md  ltm-reflect.md  navigation.md
scripts/: backfill_doc_content_hash.py  backfill_evidence_exact_bytes.py  deploy.sh  measure_search_latency.py  smoke_structured_graph_provenance.py
src/scrutator/: __init__.py  config.py  health.py  request_limits.py
tests/: conftest.py  test_auth_dependency.py  test_auth_models.py  test_auth_rebac_client.py  test_auth_verifier.py  test_backfill.py  test_backfill_doc_content_hash.py  test_backfill_evidence_exact_bytes.py  test_backfill_ltm_temper.py  test_chunk_lookup.py  test_chunker.py  test_citation.py  test_connection_acquire_scoped.py  test_connection_plan_cache.py  test_delete_source.py  test_dream.py  test_edges_by_path.py  test_embedder_paging.py  test_entity_source_chunk_id_repair.py  test_evidence_documents_integration.py  test_evidence_exact_bytes.py  test_fetch.py  test_fetch_provenance.py  test_fetch_range.py  test_health.py  test_index_batch.py  test_index_batch_atomic.py  test_index_freshness.py  test_index_writer_auth.py  test_ingest_injection_scan.py  test_ltm_audit.py  test_ltm_entity_source_backfill.py  test_ltm_grouping.py  test_ltm_llm.py  test_ltm_models.py  test_ltm_pipeline.py  test_ltm_prompts.py  test_ltm_provenance_repair.py  test_ltm_provenance_repair_integration.py  test_ltm_reflect.py  (+22 more)
tests/fixtures/: muneral_task_aggregate.json  scrutator_structured_ingest_response.testclient.json  search_baseline_v0.3.0.json
tests/security/: conftest.py  test_auth_dependencies_manifest.py  test_auth_enforced.py  test_batch_body_limit.py  test_ci_timer_quiescence.py  test_deploy_transaction.py  test_enumeration_scoped.py  test_fetch_hash_integrity.py  test_fetch_opaque_id.py  test_fetch_response_typing.py  test_fetch_skills_byte_exact.py  test_fetch_tenant_isolation.py  test_machine_capability_auth.py  test_pool_guc_reset.py  (+3 more)
tools/: backfill_ltm_temper.py  backfill_sections.py  smoke_ltm_source_delete.py
(+112 files in other folders)
